add dark mode icon placeholder

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     <li><a href="/about.html">about</a></li>
                     <li><a href="/hire.html">resume</a></li>
                 </ul>
-                    <img id="toggle-nav" onclick="toggleNav()" src="/assets/menu_white_36dp.svg">
+                    <img onclick="" src="/assets/header/dark_mode_white_36dp.svg">
             </div>
             <div class="mobile-only">
-                <img id="toggle-nav" onclick="toggleNav()" src="/assets/menu_white_36dp.svg">
-                <img id="toggle-nav" onclick="toggleNav()" src="/assets/menu_white_36dp.svg"> 
+                <img id="toggle-nav" onclick="toggleNav()" src="/assets/header/menu_white_36dp.svg">
+                <img id="toggle-nav" onclick="toggleNav()" src="/assets/header/dark_mode_white_36dp.svg"> 
             </div>
     </header>
     <nav class="nav" id="nav-mobile">
