--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <header>
-        <div class="nav-left"><a href="/"><h1>Hello World</h1></a></div>
+        <div class="nav-left">
+            <a href="/">
+                <h2>Hello World</h2>
+            </a>
+        </div>
         <div class="nav-right pc-only">
             <ul class="header-links">
                 <li><a href="/blog.html">blog</a></li>
